update template related rest url.